--- a/index.html
+++ b/index.html
@@ -97,8 +97,9 @@
 </section>
 
 <div class="sns-wrap">
-  <a href="https://github.com/Jo-Jae"><img class="img" alt="고양이 사진" src="냥이.jpg"></a>
-  <a href="https://github.com/Jo-Jae"><img class="img" alt="고양이 사진" src="고양이.jpg"></a>
+  <a href="https://github.com/Jo-Jae" target="_blank"><img class="img" alt="고양이 사진" src="냥이.jpg"></a>
+  <a href="https://github.com/Jo-Jae" target="_blank"><img class="img" alt="고양이 사진" src="고양이.jpg"></a>
+
 </div>
 </div>
 <footer>
